# Lab-Project-FreeRTOS-MCUBoot

./: .gitignore  .gitmodules  LICENSE  PORTING.md  README.md
patches/: esp-idf.patch  mcuboot.patch
port/espressif/src/: base64_port.c  boot_assert_port.c  boot_heap_port.c  boot_log_port.c  boot_serial_port.c  boot_startup_port.c  boot_wdt_port.c  crc16_port.c  system_port.c
proj/espressif/esp32/: README.md
proj/espressif/esp32/app/: CMakeLists.txt  sdkconfig
proj/espressif/esp32/app/main/: CMakeLists.txt  main.c  start.c
proj/espressif/esp32/bootloader/: CMakeLists.txt  bootloader.conf  bootloader_mbedtls_config.h  gdbinit  port.cmake  sdkconfig.h
proj/espressif/esp32/bootloader/ld/: bootloader.ld  rom_32.ld
